--- a/fantastic-finale-914-Chu/fantastic-finale-914-Chu.vcxproj
+++ b/fantastic-finale-914-Chu/fantastic-finale-914-Chu.vcxproj
@@ -182,6 +182,7 @@
   <ItemGroup>
     <ClCompile Include="background.cpp" />
     <ClCompile Include="life.cpp" />
+    <ClCompile Include="platform.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
@@ -238,6 +239,7 @@
   <ItemGroup>
     <ClInclude Include="background.h" />
     <ClInclude Include="life.h" />
+    <ClInclude Include="platform.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="..\..\..\..\..\Desktop\of_v0.10.1_vs2017_release\of_v0.10.1_vs2017_release\addons\ofxActionManager\src\Action.h" />
