--- a/fantastic-finale-914-Chu/fantastic-finale-914-Chu.vcxproj.filters
+++ b/fantastic-finale-914-Chu/fantastic-finale-914-Chu.vcxproj.filters
@@ -157,6 +157,7 @@
     <ClCompile Include="background.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="platform.cpp" />
+    <ClCompile Include="playerStatus.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -353,6 +354,7 @@
     <ClInclude Include="background.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="platform.h" />
+    <ClInclude Include="playerStatus.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="icon.rc" />
